oops forgot to commit where I changed DTM to DSM in challenge

--- a/_episodes_rmd/03-raster-reproject-in-r.Rmd
+++ b/_episodes_rmd/03-raster-reproject-in-r.Rmd
@@ -230,7 +230,7 @@ ggplot() +
 We have now successfully draped the Digital Terrain Model on top of our
 hillshade to produce a nice looking, textured map!
 
-> ## Challenge: Reproject, then Plot a Digital Terrain Model
+> ## Challenge: Reproject, then Plot a Digital Surface Model
 > Create a map of the
 > [San Joaquin Experimental Range](https://www.neonscience.org/field-sites/field-sites-map/SJER)
 > field site using the `SJER_DSMhill_WGS84.tif` and `SJER_dsmCrop.tif` files.
@@ -245,14 +245,14 @@ hillshade to produce a nice looking, textured map!
 > > raster("data/raster/SJER_DSMhill_WGS84.tif")
 > > 
 > > # reproject raster
-> > DTM_hill_UTMZ18N_SJER <- projectRaster(DSM_hill_SJER_WGS,
+> > DSM_hill_UTMZ18N_SJER <- projectRaster(DSM_hill_SJER_WGS,
 > >                                   crs = crs(DSM_SJER),
 > >                                   res = 1)
 > > 
 > > # convert to data.frames
 > > DSM_SJER_df <- as.data.frame(DSM_SJER, xy = TRUE)
 > > 
-> > DSM_hill_SJER_df <- as.data.frame(DTM_hill_UTMZ18N_SJER, xy = TRUE)
+> > DSM_hill_SJER_df <- as.data.frame(DSM_hill_UTMZ18N_SJER, xy = TRUE)
 > > 
 > > ggplot() +
 > >      geom_raster(data = DSM_hill_SJER_df, 
