--- a/_episodes_rmd/09-vector-when-data-dont-line-up-crs.Rmd
+++ b/_episodes_rmd/09-vector-when-data-dont-line-up-crs.Rmd
@@ -46,10 +46,10 @@ We will continue to work with the three shapefiles that we loaded in the
 
 ```{r load-data, echo = FALSE, results = 'hide', warning = FALSE, message = FALSE}
 # learners will have this data loaded from previous episodes
-aoi_boundary_HARV <- st_read("data/NEON-DS-Site-Layout-Files/HARV/HarClip_UTMZ18.shp")
-lines_HARV <- st_read("data/NEON-DS-Site-Layout-Files/HARV/HARV_roads.shp")
-point_HARV <- st_read("data/NEON-DS-Site-Layout-Files/HARV/HARVtower_UTM18N.shp")
-CHM_HARV <- raster("data/NEON-DS-Airborne-Remote-Sensing/HARV/CHM/HARV_chmCrop.tif")
+aoi_boundary_HARV <- st_read("data/vector/HarClip_UTMZ18.shp")
+lines_HARV <- st_read("data/vector/HARV_roads.shp")
+point_HARV <- st_read("data/vector/HARVtower_UTM18N.shp")
+CHM_HARV <- raster("data/raster/HARV_chmCrop.tif")
 CHM_HARV_df <- as.data.frame(CHM_HARV, xy = TRUE)
 roadColors <- c("blue", "green", "grey", "purple")[lines_HARV$TYPE]
 ```
@@ -108,7 +108,7 @@ these data have been modified and reprojected from the original data downloaded
 from the Census website to support the learning goals of this episode.
 
 ```{r read-shp }
-state_boundary_US <- st_read("data/NEON-DS-Site-Layout-Files/US-Boundary-Layers/US-State-Boundaries-Census-2014.shp")
+state_boundary_US <- st_read("data/vector/US-State-Boundaries-Census-2014.shp")
 ```
 
 Next, let's plot the U.S. states data:
@@ -127,7 +127,7 @@ nicer. We will import
 `NEON-DS-Site-Layout-Files/US-Boundary-Layers/US-Boundary-Dissolved-States`.
 
 ```{r}
-country_boundary_US <- st_read("data/NEON-DS-Site-Layout-Files/US-Boundary-Layers/US-Boundary-Dissolved-States.shp")
+country_boundary_US <- st_read("data/vector/US-Boundary-Dissolved-States.shp")
 ```
 
 If we specify a thicker line width using `size = 2` for the border layer, it will
