--- a/_episodes_rmd/07-vector-shapefile-attributes-in-r.Rmd
+++ b/_episodes_rmd/07-vector-shapefile-attributes-in-r.Rmd
@@ -30,10 +30,10 @@ library(sf)
 
 ```{r load-data, echo=FALSE, results='hide'}
 # learners will have this data loaded from previous episodes
-point_HARV <- st_read("data/NEON-DS-Site-Layout-Files/HARV/HARVtower_UTM18N.shp")
-lines_HARV <- st_read("data/NEON-DS-Site-Layout-Files/HARV/HARV_roads.shp")
+point_HARV <- st_read("data/vector/HARVtower_UTM18N.shp")
+lines_HARV <- st_read("data/vector/HARV_roads.shp")
 aoi_boundary_HARV <- st_read(
-  "data/NEON-DS-Site-Layout-Files/HARV/HarClip_UTMZ18.shp")
+  "data/vector/HarClip_UTMZ18.shp")
 ```
 
 > ## Things You’ll Need To Complete This Episode
@@ -454,7 +454,7 @@ ggplot() +
 > ## Challenge: Plot Polygon by Attribute
 >
 > 1. Create a map of the state boundaries in the United States using the data
-> located in your downloaded data folder: `NEON-DS-Site-Layout-Files/US-Boundary-Layers\US-State-Boundaries-Census-2014`.
+> located in your downloaded data folder: `vector/US-State-Boundaries-Census-2014`.
 > Apply a fill color to each state using its `region` value. Add a legend.
 >
 > > ## Answers
@@ -462,7 +462,7 @@ ggplot() +
 > > in the `region` column:
 > > ``` {r}
 > > state_boundary_US <- 
-> > st_read("data/NEON-DS-Site-Layout-Files/US-Boundary-Layers/US-State-Boundaries-Census-2014.shp")
+> > st_read("data/vector/US-State-Boundaries-Census-2014.shp")
 > > 
 > > levels(state_boundary_US$region)
 > > ```
